--- a/index.html
+++ b/index.html
@@ -1,101 +1,59 @@
 <!DOCTYPE html>
-
 <html>
+  <head>
+    <meta charset="utf-8">
+    <title>Andre De Lucca</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
+  </head>
+  <body>
 
-<head>
-  <meta charset="utf-8">
-  <title>Reuna Development</title>
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-image">
+    <h1>I'm Andre De Lucca</h1>
+    <h2> <span class="pro"> Pro </span>Web Designer</h2>
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">
+    <img class="mountain-img" src="images/mountain.png" alt="mountain-image">
 
-</head>
+  </div>
 
-<body>
-  <h1> Andre De Lucca</h1>
-  <img src="Foto01.jpg" alt="Andre De Lucca Profile Picture">
-  <p><em>Project Supervisor at <strong><a href="https://www.penskelogistics.com/">Penske Logistics</a></strong></em></p>
-  <p><em>Full Stack Developer at <strong><a href="https://www.asugarfreelife.com/">A Sugar Free Life</a></strong></em></p>
-  <p>I am an IOS and Web Developer, I like coffee and exercise</p>
-  <hr>
-  <h3>Education</h3>
-  <ul>
-    <li><a href="https://maua.br/"> Manufacturing and Production Engineering - IMT Sao Paulo, Brazil </a></li>
-    <li><a href="https://www.unsw.edu.au/">Business and Engineering - UNSW Sydney, Australia</a></li>
-    <li><a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">Full Stack Developer - Udemy Online Course</a></li>
-  </ul>
-  <a href="hobbies.html">My Hobbies</a>
-
-  <a href="contact.html">Contact Me</a>
-
-  <hr>
-
-  <h3>Work Experience</h3>
-
-  <table cellspacing="10">
-    <thead>
-      <tr>
-        <td>Year </td>
-        <td>Worked At</td>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2015 - 2017 </td>
-        <td>GPA - Senior Supply Chain Analyst</td>
-      </tr>
-      <tr>
-        <td>2017 - 2019 </td>
-        <td>Penske Logistics - Project Supervisor</td>
-      </tr>
-    </tbody>
-  </table>
-
-  <hr>
-
-  <h3>Skills</h3>
-
-    <table cellspacing="10">
-            <tr>
-              <td>HTML</td>
-              <td>⭐️⭐️⭐️⭐️⭐️</td>
-            </tr>
-            <tr>
-              <td>CSS</td>
-              <td>⭐️⭐️⭐️⭐️⭐️</td>
-            </tr>
-            <tr>
-              <td>Java Script</td>
-              <td>⭐️⭐️⭐️⭐️⭐️</td>
-            </tr>
-            <tr>
-              <td>SQL</td>
-              <td>⭐️⭐️⭐️⭐️</td>
-            </tr>
-            <tr>
-              <td>Microsoft Power B.I</td>
-              <td>⭐️⭐️⭐️⭐️⭐️</td>
-            </tr>
-            <tr>
-              <td>Qlik View</td>
-              <td>⭐️⭐️⭐️⭐️⭐️</td>
-            </tr>
-            <tr>
-              <td>Microsoft Excel</td>
-              <td>⭐️⭐️⭐️⭐️⭐️</td>
-            </tr>
-            <tr>
-              <td>Microsoft Acess </td>
-              <td>⭐️⭐️⭐️⭐️⭐️</td>
-            </tr>
-            <tr>
-              <td>Microsoft Power Point </td>
-              <td>⭐️⭐️⭐️⭐️⭐️</td>
-            </tr>
-            <tr>
-              <td>Microsoft Word </td>
-              <td>⭐️⭐️⭐️⭐️⭐️</td>
-            </tr>
-      </table>
+  <div class="middle-container">
+    <div class="profile">
+      <img class="foto_pessoal" src="images/Foto01.jpg" alt="">
+      <h2>Hello.</h2>
+      <p class="intro">I'm an Web Developer, driven by passion on learning and technology. Open to negotiate and talk about any project. I'm also a beer admirer !</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="image_skill_01" src="https://media.giphy.com/media/b2CD0Qrq2ulwY/giphy.gif" alt="">
+        <h3>Design and Development</h3>
+        <p>I started learning to code in 2015, learning PHP and MySql. Two year`s latter I`ve started to study HTML, CSS and JS to create webpages, to create some inside company interfaces and apps.</p>
+      </div>
+      <div class="skill-row">
+        <img class="image_skill_02" src="https://media.giphy.com/media/xT9IgzoKnwFNmISR8I/giphy.gif" alt="">
+        <h3>Lorem Ipsum Dolor</h3>
+        <p >Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+      <p class="get_in_touch_text">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <a class="btn" href="mailto:andregdelucca@gmail.com">CONTACT ME</a>
+    </div>
+  </div>
 
 
-</body>
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/in/andr%C3%A9-de-lucca-182a2b4b/">LinkedIn</a>
+    <a class="footer-link" href="https://reunadevelopment.github.io/cv/">Github</a>
+    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <p class="texto_fim">© 2020 Andre De Lucca © Reuna Development<p>
+  </div>
 
+  </body>
 </html>
