Update On Profile
Updated:

Skills
About Me
Contact Info

--- a/index.html
+++ b/index.html
@@ -24,27 +24,27 @@
     <div class="profile">
       <img class="foto_pessoal" src="images/Foto01.jpg" alt="">
       <h2>Hello.</h2>
-      <p class="intro">I'm an Web Developer, driven by passion on learning and technology. Open to negotiate and talk about any project. I'm also a beer admirer !</p>
+      <p class="intro">I'm an Web Developer, driven by passion on learning, technology and everything in it's orbit. I consider my self as a Client Driven worker, focused to exceed the expectation. I'm also a beer admirer !</p>
     </div>
     <hr>
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
         <img class="image_skill_01" src="https://media.giphy.com/media/b2CD0Qrq2ulwY/giphy.gif" alt="">
-        <h3>Design and Development</h3>
-        <p>I started learning to code in 2015, learning PHP and MySql. Two year`s latter I`ve started to study HTML, CSS and JS to create webpages, to create some inside company interfaces and apps.</p>
+        <h3>Front End</h3>
+        <p>I started learning to code in 2015, learning PHP and MySql. Two year`s latter I`ve started to study HTML, CSS and JavaScript becoming a Front End Developer.</p>
       </div>
       <div class="skill-row">
         <img class="image_skill_02" src="https://media.giphy.com/media/xT9IgzoKnwFNmISR8I/giphy.gif" alt="">
-        <h3>Lorem Ipsum Dolor</h3>
-        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        <h3>Other's Skills</h3>
+        <p>Microsoft office admiror, with a vast experience on Access, Excel, Power Point and Project.</p>
       </div>
     </div>
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-      <p class="get_in_touch_text">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <h3>Fell Free to Contact Me at Anytime!</h3>
+      <p class="get_in_touch_text">Open to discuss price, timeline and style.</p>
       <a class="btn" href="mailto:andregdelucca@gmail.com">CONTACT ME</a>
     </div>
   </div>
