--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="skill-row">
         <img class="image_skill_02" src="https://media.giphy.com/media/xT9IgzoKnwFNmISR8I/giphy.gif" alt="">
         <h3>Other's Skills</h3>
-        <p>Microsoft office admiror, with a vast experience on Access, Excel, Power Point and Project.</p>
+        <p>PHP, Laravel, MySQL.</p>
       </div>
     </div>
     <hr>
