--- a/index.html
+++ b/index.html
@@ -32,12 +32,24 @@
       <div class="skill-row">
         <img class="image_skill_01" src="https://media.giphy.com/media/b2CD0Qrq2ulwY/giphy.gif" alt="">
         <h3>Front End</h3>
-        <p>I started learning to code in 2015, learning PHP and MySql. Two year`s latter I`ve started to study HTML, CSS and JavaScript becoming a Front End Developer.</p>
+        <p>HTML5 & CSS3 – 05 years ++ of experience</p>
+        <p>Bootstrap – 04 years ++ of experience</p>
+        <p>JavaScript, Jquery, Ajax, DOM, ES5, ES6 – 02 years of experience</p>
+        <p>Angular.js and React.js – Studying</p>      
       </div>
       <div class="skill-row">
         <img class="image_skill_02" src="https://media.giphy.com/media/xT9IgzoKnwFNmISR8I/giphy.gif" alt="">
+        <h3>Backend</h3>
+        <p>PHP 03 years ++ of experience</p>
+        <p>Mysql, MariaDB 03 years ++ of experience...</p>
+        <p>Laravel 01 year ++ of experience...</p>
+      </div>
+      <div class="skill-row">
+        <img class="image_skill_02" src=".\images\FullCalendar.png" alt="">
         <h3>Other's Skills</h3>
-        <p>PHP, Laravel, MySQL.</p>
+        <p>Git, Github, Bitbucket</p>
+        <p>Fullcalendar, SweetAlert, Whatsapp API, SMS API, Datatable.</p>
+        <p>Squarespace, Wix, WordPress</p>
       </div>
     </div>
     <hr>
